--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,111 +2,92 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f3f3f3">
+    android:background="#f3f3f3"
+    android:orientation="vertical">
 
-    <RelativeLayout
-        android:id="@+id/activity_login_rlTitle"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="#262626">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="登录"
-            android:textColor="#fff"
-            android:textSize="22sp"
-            android:layout_centerInParent="true"/>
-
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:src="@mipmap/close"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="20dp"/>
-    </RelativeLayout>
+    <include layout="@layout/activity_title_bar" />
 
     <RelativeLayout
         android:id="@+id/activity_login_rlAccountAndPassword"
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:layout_marginTop="15dp"
-        android:background="#fff"
-        android:layout_below="@id/activity_login_rlTitle">
+        android:layout_marginTop="60dp"
+        android:background="#fff">
 
         <ImageView
             android:id="@+id/iv_account"
             android:layout_width="15dp"
             android:layout_height="22dp"
-            android:src="@mipmap/icon_mobilephone"
             android:layout_marginLeft="25dp"
-            android:layout_marginTop="20dp"/>
+            android:layout_marginTop="20dp"
+            android:src="@mipmap/icon_mobilephone" />
 
         <View
             android:id="@+id/view1_vertical"
             android:layout_width="0.5dp"
             android:layout_height="30dp"
-            android:background="#dcdcdc"
-            android:layout_toRightOf="@id/iv_account"
+            android:layout_marginStart="15dp"
             android:layout_marginTop="15dp"
-            android:layout_marginStart="15dp"/>
+            android:layout_toRightOf="@id/iv_account"
+            android:background="#dcdcdc" />
 
         <EditText
+            android:id="@+id/et_account"
             android:layout_width="match_parent"
             android:layout_height="28dp"
-            android:id="@+id/et_account"
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="18dp"
+            android:layout_toEndOf="@+id/view1_vertical"
+            android:background="@null"
             android:hint="请输入账号"
             android:singleLine="true"
             android:textColorHint="#969696"
-            android:background="@null"
-            android:textSize="15sp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="18dp"
-            android:layout_toEndOf="@+id/view1_vertical" />
+            android:textSize="15sp" />
 
         <View
             android:id="@+id/view_horizontal"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="#eeeeee"
             android:layout_alignStart="@id/view1_vertical"
+            android:layout_below="@id/et_account"
             android:layout_marginTop="15dp"
-            android:layout_below="@id/et_account"/>
+            android:background="#eeeeee" />
 
         <ImageView
             android:id="@+id/iv_password"
             android:layout_width="20dp"
             android:layout_height="18dp"
-            android:src="@mipmap/icon_password"
-            android:layout_below="@id/view_horizontal"
             android:layout_alignStart="@id/iv_account"
-            android:layout_marginTop="20dp"/>
+            android:layout_below="@id/view_horizontal"
+            android:layout_marginTop="20dp"
+            android:src="@mipmap/icon_password" />
 
         <View
             android:id="@+id/view2_vertical"
             android:layout_width="0.5dp"
             android:layout_height="30dp"
-            android:background="#dcdcdc"
-            android:layout_toRightOf="@id/iv_password"
-            android:layout_marginTop="15dp"
+            android:layout_alignStart="@id/view_horizontal"
             android:layout_below="@id/view_horizontal"
-            android:layout_alignStart="@id/view_horizontal"/>
+            android:layout_marginTop="15dp"
+            android:layout_toRightOf="@id/iv_password"
+            android:background="#dcdcdc" />
 
         <EditText
             android:id="@+id/et_password"
             android:layout_width="match_parent"
             android:layout_height="28dp"
-            android:layout_toEndOf="@id/view2_vertical"
+            android:layout_alignStart="@id/et_account"
             android:layout_below="@id/view_horizontal"
-            android:hint="请输入密码"
-            android:singleLine="true"
-            android:inputType="textPassword"
-            android:textColorHint="#969696"
-            android:background="@null"
-            android:textSize="15sp"
+            android:layout_marginEnd="20dp"
             android:layout_marginTop="18dp"
-            android:layout_alignStart="@id/et_account"/>
+            android:layout_toEndOf="@id/view2_vertical"
+            android:background="@null"
+            android:hint="请输入密码"
+            android:inputType="textPassword"
+            android:singleLine="true"
+            android:textColorHint="#969696"
+            android:textSize="15sp" />
     </RelativeLayout>
 
     <Button
@@ -114,140 +95,140 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_below="@id/activity_login_rlAccountAndPassword"
-        android:layout_marginTop="40dp"
-        android:layout_marginRight="40dp"
         android:layout_marginLeft="40dp"
-        android:text="确定"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/login_btn_background"
-        android:textSize="20sp"
-        android:textColor="#fff"/>
+        android:text="确定"
+        android:textColor="#fff"
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/tv_register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="免费注册"
-        android:textSize="15sp"
-        android:textColor="#7a7a7a"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="5dp"
         android:layout_alignStart="@id/btn_login"
-        android:layout_below="@id/btn_login"/>
+        android:layout_below="@id/btn_login"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="18dp"
+        android:text="免费注册"
+        android:textColor="#7a7a7a"
+        android:textSize="15sp" />
 
     <TextView
         android:id="@+id/tv_resetPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="忘记密码?"
-        android:textSize="15sp"
-        android:textColor="#7a7a7a"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="5dp"
+        android:layout_alignEnd="@id/btn_login"
         android:layout_below="@id/btn_login"
-        android:layout_alignEnd="@id/btn_login"/>
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="18dp"
+        android:text="忘记密码?"
+        android:textColor="#7a7a7a"
+        android:textSize="15sp" />
 
     <View
+        android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:background="#dcdcdc"
-        android:layout_toLeftOf="@+id/tv_third"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="158dp"
-        android:layout_marginRight="10dp"
         android:layout_marginLeft="25dp"
-        android:id="@+id/view" />
+        android:layout_marginRight="10dp"
+        android:layout_toLeftOf="@+id/tv_third"
+        android:background="#dcdcdc" />
     <TextView
         android:id="@+id/tv_third"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="150dp"
         android:text="第三方登录"
         android:textColor="#999999"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:textSize="15sp"
-        android:layout_marginBottom="150dp"/>
+        android:textSize="15sp" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:background="#dcdcdc"
-        android:layout_toRightOf="@id/tv_third"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="159dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="25dp"/>
+        android:layout_marginRight="25dp"
+        android:layout_toRightOf="@id/tv_third"
+        android:background="#dcdcdc" />
 
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
     android:layout_alignTop="@id/tv_third"
-    android:layout_marginTop="40dp">
+    android:layout_marginTop="40dp"
+    android:orientation="horizontal">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:orientation="vertical">
     <ImageView
         android:id="@+id/iv_wechatLogin"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@mipmap/icon_wechat"
-        android:layout_gravity="center_horizontal"/>
+        android:layout_gravity="center_horizontal"
+        android:src="@mipmap/icon_wechat" />
 
     <TextView
         android:id="@+id/tv_wechat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="微信"
-        android:textSize="15sp"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
-        android:layout_gravity="center_horizontal"/>
+        android:text="微信"
+        android:textSize="15sp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:orientation="vertical">
     <ImageView
         android:id="@+id/iv_qqLogin"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@mipmap/icon_qq"
-        android:layout_gravity="center_horizontal"/>
+        android:layout_gravity="center_horizontal"
+        android:src="@mipmap/icon_qq" />
 
     <TextView
         android:id="@+id/tv_qq"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="QQ"
-        android:textSize="15sp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"
+        android:text="QQ"
+        android:textSize="15sp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:orientation="vertical">
     <ImageView
         android:id="@+id/iv_weiboLogin"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@mipmap/icon_weibo"
-        android:layout_gravity="center_horizontal"/>
+        android:layout_gravity="center_horizontal"
+        android:src="@mipmap/icon_weibo" />
 
     <TextView
         android:id="@+id/tv_weibo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="新浪微博"
-        android:textSize="15sp"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
-        android:layout_gravity="center_horizontal"/>
+        android:text="新浪微博"
+        android:textSize="15sp" />
     </LinearLayout>
 </LinearLayout>
 </RelativeLayout>
