--- a/app/src/main/res/layout/activity_makeplan.xml
+++ b/app/src/main/res/layout/activity_makeplan.xml
@@ -15,7 +15,7 @@
         android:layout_marginBottom="30dp"
         android:background="@drawable/plan_btn_background"
         android:text="制定新计划"
-        android:textColor="#fff"
+        android:textColor="@color/white"
         android:textSize="20sp" />
 
     <Button
@@ -25,7 +25,7 @@
         android:layout_centerInParent="true"
         android:background="@drawable/plan_btn_background"
         android:text="选择计划模板"
-        android:textColor="#fff"
+        android:textColor="@color/white"
         android:textSize="20sp" />
 
     <Button
@@ -37,7 +37,7 @@
         android:layout_marginTop="30dp"
         android:background="@drawable/plan_btn_background"
         android:text="新建计划模板"
-        android:textColor="#fff"
+        android:textColor="@color/white"
         android:textSize="20sp" />
 
     <LinearLayout
@@ -45,7 +45,7 @@
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:layout_alignParentBottom="true"
-        android:background="#FFF"
+        android:background="@color/white"
         android:orientation="horizontal">
 
         <LinearLayout
