--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -2,177 +2,181 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f3f3f3">
+    android:background="@color/white_bg">
 
-    <RelativeLayout
-        android:id="@+id/activity_register_rlTitle"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="#262626">
+    <!-- <RelativeLayout
+         android:id="@+id/activity_register_rlTitle"
+         android:layout_width="match_parent"
+         android:layout_height="50dp"
+         android:background="#262626">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="注册"
-            android:textColor="#fff"
-            android:textSize="22sp"
-            android:layout_centerInParent="true"/>
+         <TextView
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:text="注册"
+             android:textColor="#fff"
+             android:textSize="22sp"
+             android:layout_centerInParent="true"/>
 
-        <ImageView
-            android:id="@+id/iv_back"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:src="@mipmap/fanhui_title"
-            android:layout_marginLeft="20dp"
-            android:layout_centerVertical="true" />
-    </RelativeLayout>
+         <ImageView
+             android:id="@+id/iv_back"
+             android:layout_width="25dp"
+             android:layout_height="25dp"
+             android:src="@mipmap/fanhui_title"
+             android:layout_marginLeft="20dp"
+             android:layout_centerVertical="true" />
+     </RelativeLayout>-->
+
+    <include
+        android:id="@+id/title"
+        layout="@layout/activity_title_bar" />
 
     <RelativeLayout
         android:id="@+id/activity_register_rlAccountAndPassword"
         android:layout_width="match_parent"
         android:layout_height="190dp"
+        android:layout_below="@id/title"
         android:layout_marginTop="15dp"
-        android:background="#fff"
-        android:layout_below="@id/activity_register_rlTitle">
+        android:background="@color/white">
 
         <ImageView
             android:id="@+id/iv_account"
             android:layout_width="15dp"
             android:layout_height="22dp"
-            android:src="@mipmap/icon_mobilephone"
             android:layout_marginLeft="25dp"
-            android:layout_marginTop="20dp"/>
+            android:layout_marginTop="20dp"
+            android:src="@mipmap/icon_mobilephone" />
 
         <View
             android:id="@+id/view1_vertical"
             android:layout_width="0.5dp"
             android:layout_height="30dp"
-            android:background="#dcdcdc"
-            android:layout_toRightOf="@id/iv_account"
+            android:layout_marginStart="15dp"
             android:layout_marginTop="15dp"
-            android:layout_marginStart="15dp"/>
+            android:layout_toRightOf="@id/iv_account"
+            android:background="@color/light_gray" />
 
 
         <EditText
+            android:id="@+id/et_account"
             android:layout_width="250dp"
             android:layout_height="28dp"
-            android:id="@+id/et_account"
-            android:hint="请输入手机号"
-            android:singleLine="true"
-            android:textColorHint="#969696"
-            android:background="@null"
-            android:textSize="15sp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="18dp"
-            android:layout_toEndOf="@+id/view1_vertical" />
+            android:layout_toEndOf="@+id/view1_vertical"
+            android:background="@null"
+            android:hint="@string/input_phone"
+            android:singleLine="true"
+            android:textColorHint="@color/gray_hint_dark"
+            android:textSize="15sp" />
 
         <ImageView
             android:id="@+id/cancel_number"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:src="@mipmap/icon_close"
-            android:layout_alignTop="@id/et_account"
             android:layout_alignParentEnd="true"
+            android:layout_alignTop="@id/et_account"
             android:layout_marginRight="10dp"
-            android:layout_marginTop="3dp"/>
+            android:layout_marginTop="3dp"
+            android:src="@mipmap/icon_close" />
         <View
             android:id="@+id/view1_horizontal"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="#eeeeee"
             android:layout_alignStart="@id/view1_vertical"
+            android:layout_below="@id/et_account"
             android:layout_marginTop="15dp"
-            android:layout_below="@id/et_account"/>
+            android:background="@color/light_white" />
 
 
         <ImageView
             android:id="@+id/iv_password"
             android:layout_width="20dp"
             android:layout_height="18dp"
-            android:src="@mipmap/icon_password"
-            android:layout_below="@id/view1_horizontal"
             android:layout_alignStart="@id/iv_account"
-            android:layout_marginTop="20dp"/>
+            android:layout_below="@id/view1_horizontal"
+            android:layout_marginTop="20dp"
+            android:src="@mipmap/icon_password" />
 
         <View
             android:id="@+id/view2_vertical"
             android:layout_width="0.5dp"
             android:layout_height="30dp"
-            android:background="#dcdcdc"
-            android:layout_toRightOf="@id/iv_password"
-            android:layout_marginTop="15dp"
+            android:layout_alignStart="@id/view1_horizontal"
             android:layout_below="@id/view1_horizontal"
-            android:layout_alignStart="@id/view1_horizontal"/>
+            android:layout_marginTop="15dp"
+            android:layout_toRightOf="@id/iv_password"
+            android:background="@color/light_gray" />
 
         <EditText
             android:id="@+id/et_password"
             android:layout_width="match_parent"
             android:layout_height="28dp"
-            android:layout_toEndOf="@id/view2_vertical"
+            android:layout_alignStart="@id/et_account"
             android:layout_below="@id/view1_horizontal"
-            android:hint="请输入密码"
-            android:singleLine="true"
-            android:inputType="textPassword"
-            android:textColorHint="#969696"
-            android:background="@null"
-            android:textSize="15sp"
             android:layout_marginTop="18dp"
-            android:layout_alignStart="@id/et_account"/>
+            android:layout_toEndOf="@id/view2_vertical"
+            android:background="@null"
+            android:hint="@string/input_password"
+            android:inputType="textPassword"
+            android:singleLine="true"
+            android:textColorHint="@color/gray_hint_dark"
+            android:textSize="15sp" />
 
         <View
             android:id="@+id/view2_horizontal"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="#eeeeee"
             android:layout_alignStart="@id/view2_vertical"
+            android:layout_below="@id/et_password"
             android:layout_marginTop="15dp"
-            android:layout_below="@id/et_password"/>
+            android:background="@color/light_white" />
 
         <ImageView
             android:id="@+id/iv_identify"
             android:layout_width="15dp"
             android:layout_height="21dp"
-            android:src="@mipmap/icon_code"
-            android:layout_below="@id/view2_horizontal"
             android:layout_alignStart="@id/iv_password"
-            android:layout_marginTop="20dp"/>
+            android:layout_below="@id/view2_horizontal"
+            android:layout_marginTop="20dp"
+            android:src="@mipmap/icon_code" />
 
         <View
             android:id="@+id/view3_vertical"
             android:layout_width="0.5dp"
             android:layout_height="30dp"
-            android:background="#dcdcdc"
-            android:layout_toRightOf="@id/iv_identify"
-            android:layout_marginTop="15dp"
+            android:layout_alignStart="@id/view2_horizontal"
             android:layout_below="@id/view2_horizontal"
-            android:layout_alignStart="@id/view2_horizontal"/>
+            android:layout_marginTop="15dp"
+            android:layout_toRightOf="@id/iv_identify"
+            android:background="@color/light_gray" />
 
 
         <EditText
             android:id="@+id/et_identify"
             android:layout_width="150dp"
             android:layout_height="28dp"
-            android:layout_toEndOf="@id/view2_vertical"
+            android:layout_alignStart="@id/et_account"
             android:layout_below="@id/view2_horizontal"
-            android:hint="请输入验证码"
-            android:singleLine="true"
-            android:textColorHint="#969696"
-            android:background="@null"
-            android:textSize="15sp"
             android:layout_marginTop="18dp"
-            android:layout_alignStart="@id/et_account"/>
+            android:layout_toEndOf="@id/view2_vertical"
+            android:background="@null"
+            android:hint="@string/input_verification_code"
+            android:singleLine="true"
+            android:textColorHint="@color/gray_hint_dark"
+            android:textSize="15sp" />
         
         <Button
             android:id="@+id/takeIndentify"
             android:layout_width="85dp"
             android:layout_height="35dp"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@id/view2_horizontal"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="12dp"
             android:background="@drawable/login_btn_background"
             android:text="获取验证码"
-            android:textColor="#fff"
-            android:layout_below="@id/view2_horizontal"
-            android:layout_marginTop="12dp"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="10dp"/>
+            android:textColor="@color/white" />
 
     </RelativeLayout>
 
@@ -180,68 +184,68 @@
         android:id="@+id/tv_sendIdentify"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="验证码已发送到13023996062"
-        android:textSize="14sp"
-        android:textColor="#949494"
-        android:layout_marginTop="15dp"
+        android:layout_below="@id/activity_register_rlAccountAndPassword"
         android:layout_marginLeft="25dp"
-        android:layout_below="@id/activity_register_rlAccountAndPassword"/>
+        android:layout_marginTop="15dp"
+        android:text="验证码已发送到13023996062"
+        android:textColor="@color/gray_hint"
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/tv_receiverSecond"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="接受短信大概需要"
         android:layout_below="@id/tv_sendIdentify"
         android:layout_marginLeft="25dp"
-        android:textSize="14sp"
-        android:textColor="#949494"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"
+        android:text="@string/recive_message_time"
+        android:textColor="@color/gray_hint"
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/tv_remainSecond"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="59S"
-        android:textSize="14sp"
         android:layout_below="@id/tv_sendIdentify"
         android:layout_marginTop="10dp"
-        android:textColor="#f00"
-        android:layout_toEndOf="@id/tv_receiverSecond"/>
+        android:layout_toEndOf="@id/tv_receiverSecond"
+        android:text="59S"
+        android:textColor="@color/red"
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/tv_resetIdentify"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
-        android:text="没有收到验证码?"
-        android:textColor="#f00"
-        android:layout_below="@id/tv_sendIdentify"
-        android:layout_marginTop="10dp"
         android:layout_alignParentEnd="true"
-        android:layout_marginRight="20dp"/>
+        android:layout_below="@id/tv_sendIdentify"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="10dp"
+        android:text="没有收到验证码?"
+        android:textColor="@color/red"
+        android:textSize="14sp" />
 
     <Button
         android:id="@+id/btn_register"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_below="@id/tv_receiverSecond"
-        android:layout_marginTop="40dp"
-        android:layout_marginRight="40dp"
         android:layout_marginLeft="40dp"
-        android:text="注册"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/login_btn_background"
-        android:textSize="20sp"
-        android:textColor="#fff"/>
+        android:text="注册"
+        android:textColor="@color/white"
+        android:textSize="20sp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="注册即表示你已同意《私教帮服务协议》"
-        android:layout_below="@+id/btn_register"
         android:layout_alignStart="@id/btn_register"
-        android:layout_marginTop="10dp"
-        android:textSize="10sp"
+        android:layout_below="@+id/btn_register"
         android:layout_marginLeft="5dp"
-        android:textColor="#949494"/>
+        android:layout_marginTop="10dp"
+        android:text="@string/registe_hint"
+        android:textColor="@color/gray_hint"
+        android:textSize="10sp" />
 </RelativeLayout>
