--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -2,163 +2,163 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#ededed">
+    android:background="@color/lime_white"
+    android:orientation="vertical">
 
     <RelativeLayout
-        android:orientation="horizontal"
+        android:id="@+id/activity_setting_rl_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#000"
-        android:id="@+id/activity_setting_rl_title">
+        android:background="@color/black"
+        android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/activity_setting_back"
             android:layout_width="wrap_content"
             android:layout_height="25dp"
-            android:id="@+id/activity_setting_back"
-            android:src="@mipmap/fanhui_title"
             android:layout_margin="20dp"
+            android:src="@mipmap/fanhui_title"
             />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="设置"
-            android:textSize="20dp"
-            android:textColor="#FFF"
             android:id="@+id/activity_setting_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true" />
+            android:text="设置"
+            android:textColor="#FFF"
+            android:textSize="20dp" />
     </RelativeLayout>
 
     <RelativeLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_gravity="center_horizontal"
         android:id="@+id/activity_setting_rl1"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"
-        android:background="#FFF">
+        android:background="@color/white"
+        android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/activity_setting_rl1_tv_vnewinfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="15dp"
             android:text="新消息通知"
-            android:textSize="15dp"
-            android:layout_margin="15dp"
-            android:id="@+id/activity_setting_rl1_tv_vnewinfo"/>
+            android:textSize="15dp" />
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/activity_setting_rl1_iv_enter1"
-            android:src="@mipmap/you"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_margin="15dp"/>
+            android:layout_margin="15dp"
+            android:src="@mipmap/you" />
     </RelativeLayout>
 
     <RelativeLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_gravity="center_horizontal"
         android:id="@+id/activity_setting_rl2"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="2dp"
-        android:background="#FFF">
+        android:background="@color/white"
+        android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/activity_setting_rl2_tv_checkupdate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="15dp"
             android:text="检查更新"
-            android:textSize="15dp"
-            android:layout_margin="15dp"
-            android:id="@+id/activity_setting_rl2_tv_checkupdate"/>
+            android:textSize="15dp" />
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/activity_setting_rl2_iv_enter2"
-            android:src="@mipmap/you"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_margin="15dp"/>
+            android:layout_margin="15dp"
+            android:src="@mipmap/you" />
     </RelativeLayout>
 
     <RelativeLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_gravity="center_horizontal"
         android:id="@+id/activity_setting_rl3"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="2dp"
-        android:background="#FFF">
+        android:background="@color/white"
+        android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/activity_setting_rl_tv_cleardata"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="15dp"
             android:text="清楚数据"
-            android:textSize="15dp"
-            android:layout_margin="15dp"
-            android:id="@+id/activity_setting_rl_tv_cleardata"/>
+            android:textSize="15dp" />
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/activity_setting_rl3_iv_enter3"
-            android:src="@mipmap/you"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_margin="15dp"/>
+            android:layout_margin="15dp"
+            android:src="@mipmap/you" />
     </RelativeLayout>
 
     <RelativeLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_gravity="center_horizontal"
         android:id="@+id/activity_setting_rl4"
-        android:layout_marginTop="20dp"
-        android:background="#FFF">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="意见反馈"
-            android:textSize="15dp"
-            android:layout_margin="15dp"
-            android:id="@+id/activity_setting_l4_tv_suggest"/>
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/activity_setting_rl4_iv_enter4"
-            android:src="@mipmap/you"
-            android:layout_alignParentRight="true"
-            android:layout_margin="15dp"/>
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_gravity="center_horizontal"
-        android:id="@+id/activity_setting_rl5"
-        android:layout_marginTop="2dp"
-        android:background="#FFF">
+        android:layout_marginTop="20dp"
+        android:background="@color/white"
+        android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/activity_setting_l4_tv_suggest"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="关于"
-            android:textSize="15dp"
             android:layout_margin="15dp"
-            android:id="@+id/activity_setting_rl_tv_regarding"/>
+            android:text="意见反馈"
+            android:textSize="15dp" />
 
         <ImageView
+            android:id="@+id/activity_setting_rl4_iv_enter4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/activity_setting_rl5_iv_enter5"
-            android:src="@mipmap/you"
             android:layout_alignParentRight="true"
-            android:layout_margin="15dp"/>
+            android:layout_margin="15dp"
+            android:src="@mipmap/you" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/activity_setting_rl5"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="2dp"
+        android:background="@color/white"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/activity_setting_rl_tv_regarding"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:text="关于"
+            android:textSize="15dp" />
+
+        <ImageView
+            android:id="@+id/activity_setting_rl5_iv_enter5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_margin="15dp"
+            android:src="@mipmap/you" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -168,22 +168,22 @@
         >
 
         <ImageView
+            android:id="@+id/activity_setting_iv_exit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/activity_setting_iv_exit"
-            android:src="@mipmap/redbtn"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:src="@mipmap/redbtn" />
 
         <TextView
+            android:id="@+id/activity_setting_tv_exit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="退出登陆"
-            android:textSize="15dp"
-            android:textColor="#FFF"
-            android:id="@+id/activity_setting_tv_exit"
+            android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"/>
+            android:text="退出登陆"
+            android:textColor="@color/white"
+            android:textSize="15dp" />
     </RelativeLayout>
 
 
