--- a/app/src/main/res/layout/xiangqing_item_recycler.xml
+++ b/app/src/main/res/layout/xiangqing_item_recycler.xml
@@ -2,12 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="@color/white"
     android:orientation="horizontal"
-    android:background="#FFF"
     >
     <ImageView
+        android:id="@+id/item_recycler_iv_xiangqing"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@mipmap/imagefirst"
-        android:id="@+id/item_recycler_iv_xiangqing"/>
+        android:src="@mipmap/imagefirst" />
 </RelativeLayout>
