--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,8 @@
         android:id="@+id/activity_login_rlAccountAndPassword"
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:layout_marginTop="60dp"
+        android:layout_below="@+id/title"
+        android:layout_marginTop="10dp"
         android:background="#fff">
 
         <ImageView
